--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/selfie_320.png" alt="">
+                    <img class="img-responsive" src="img/headshot_256.png" alt="">
                     <div class="intro-text">
                         <span class="name">Heather Kemmey</span>
                         <hr class="camera-light">
